logs/bpt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bpt'...
Compiling './lib/python3.5/site-packages/bpt/box.py'...
***   File "./lib/python3.5/site-packages/bpt/box.py", line 65
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpt/package.py'...
***   File "./lib/python3.5/site-packages/bpt/package.py", line 52
    except OSError, exc:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bpt/ui'...
Listing './lib/python3.5/site-packages/bpt/ui/commands'...
Compiling './lib/python3.5/site-packages/bpt/ui/commands/autobuild.py'...
***   File "./lib/python3.5/site-packages/bpt/ui/commands/autobuild.py", line 43
    except UnsupportedPath, exc:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpt/ui/commands/autoremove.py'...
***   File "./lib/python3.5/site-packages/bpt/ui/commands/autoremove.py", line 54
    print 'The following packages will be removed:'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpt/ui/commands/basic_commands.py'...
***   File "./lib/python3.5/site-packages/bpt/ui/commands/basic_commands.py", line 75
    print fmt % ('PACKAGE', 'NAME', 'VERSION', 'STATUS')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpt/ui/main.py'...
***   File "./lib/python3.5/site-packages/bpt/ui/main.py", line 25
    print '  %-15s %s' % (name, description)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bpt-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
